Removed --enable-preview from codebase